Closed Bug 936352 Opened 11 years ago Closed 11 years ago

Media Recording - Fix wrong pointer usage in encoder module from Bug 919905

Categories

(Core :: Audio/Video: Recording, defect)

All
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: rlin, Assigned: rlin)

References

(Blocks 1 open bug)

Details

(Whiteboard: [qa-])

Attachments

(1 file, 1 obsolete file)

Attached patch patch v1 (obsolete) — Splinter Review
Wrong usage of the medatata object from encoder to writer, we should fix it.
Other change is for the EncoderFrame, The muxer would likely to keep it until enough frames can be packaged. (bug 891704) So I also change it to be ref count.
Attachment #829074 - Flags: review?(roc)
Assignee: nobody → rlin
Attached patch check-in patchSplinter Review
check-in patch, carry reviewer
try result:
https://tbpl.mozilla.org/?tree=Try&rev=2ddeb8130165
Blocks: 919905
Attachment #829074 - Attachment is obsolete: true
https://hg.mozilla.org/mozilla-central/rev/8156dd4fdf96
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Whiteboard: [qa-]
Component: Video/Audio → Video/Audio: Recording
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: