Bug 936352 - Media Recording - Fix wrong pointer usage in encoder module from Bug 919905. r=roc